<resources>
    <string name="app_name">Kojimachi</string>
    <string name="msg_error_internet">ネットワークの接続に失敗しました。\n通信環境の良いところでもう一度やり直してください。</string>
    <string name="msg_error_server">サーバへの接続に失敗しました。\n申し訳ございませんが、しばらく待ってからもう一度やり直してください。</string>
    <string name="msg_request_permission_camera">商品の写真を撮るには、アプリにカメラへのアクセスが必要です。</string>
    <string name="msg_request_permission_storage">アプリには、商品の写真を保存するためにメモリにデータを書き込む権限が必要です。</string>
    <string name="msg_request_permission_location">このアプリは、商品データの作成時に位置情報を取得するために位置情報へのアクセスを必要とします。スマートフォンの電池消耗を防ぐため『このアプリの使用中のみ許可』を推奨しています。</string>
    <string name="default_notification_channel_id">Kojimachi</string>
    <string name="default_notification_channel_name">Kojimachi</string>
    <string name="default_notification_channel_description">Kojimachi</string>
    <string name="lblRequestEnableGps">GPSの有効化が必要です</string>
    <string name="lblOK">OK</string>
    <string name="lblCancel">Cancel</string>
    <string name="msgErrorNetwork">ネットワークの接続に失敗しました。通信環境の良いところでもう一度やり直してください。</string>
    <!-- TODO: Remove or change this placeholder text -->

    <string name="lbl_reservation_management">"予約管理システム "</string>
    <string name="lbl_login_id">"ログイン ID "</string>
    <string name="lbl_login_pass">"パスワード "</string>
    <string name="lbl_forget_your_password">"※パスワードを忘れた場合には\n総務部までお知らせください。 "</string>
    <string name="lbl_login">"ログイン "</string>
    <string name="msg_login_error">ログインIDを入力して下さい。\nパスワードを入力して下さい。</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="lbl_notice">お知らせ</string>
    <string name="lbl_pre_booked_course">○○コースの予約が入りました。</string>
    <string name="lbl_commuting">出勤</string>
    <string name="lbl_LeaveWork">退勤</string>
    <string name="lbl_Scheduled_to_deposit">入金予定</string>
    <string name="lbl_deposit_period">入金期限:</string>
    <string name="lbl_deposit_amount">入金金額:</string>
    <string name="lbl_btn_payment_contact">入金 連絡</string>
    <string name="lbl_reservation_time">予約時間</string>
    <string name="lbl_facility">施設</string>
    <string name="lbl_course">コース</string>
    <string name="lbl_attendance_time">出勤時間</string>
    <string name="lbl_date">日付</string>
    <string name="lbl_attendance_status">出勤状況</string>
    <string name="lblAttendanceTime">出社時間</string>
    <string name="lbl_leave_time">退勤時間</string>
    <string name="lbl_standby">待機所</string>
    <string name="lbl_put_forward">提出</string>
    <string name="lbl_back">戻る</string>
    <string name="lbl_total_sales">売上合計</string>
    <string name="lbl_facility_deposit">施設預け</string>
    <string name="lbl_fee_placement">手数料置き</string>
    <string name="lblTakeOutCashTotal">持帰り現金合計</string>
    <string name="lblActualCashOnHand">実際の手持ち現金</string>
    <string name="lblCircle">円</string>
    <string name="lblInsufficientCash">過不足現金</string>
    <string name="lblPayOff">精算</string>
    <string name="lblPercentageCommission">歩合 合計</string>
    <string name="lblSalesAmount">売上額</string>
    <string name="lblCommission">歩合</string>
    <string name="lbl_tvTitleHotel">ホテル</string>
    <string name="lbl_tvTitleTechnicians">相揉み（鈴木　鈴子）</string>
    <string name="lbl_tvTitleInfo">連絡事項</string>
    <string name="lbl_btnBookingConfirm">予約確認</string>
    <string name="lbl_btnStartMoving">移動開始</string>
    <string name="lbl_btnStartOfTreatment">施術開始</string>
    <string name="lbl_tvTitleServiceCharge">サービス料 :</string>
    <string name="lbl_tvTitleBusinessTripFee">出張料：</string>
    <string name="lbl_tvTitleFee">手数料：</string>
    <string name="lbl_btnExtensionOrAdditionalOptions">延長・追加オプション</string>
    <string name="lbl_btnNotChange">変更しない</string>
    <string name="lbl_btnEndOfTreatment">施術終了</string>
    <string name="lbl_btnChange">変更する</string>
    <string name="lbl_btnCancel">変更しない</string>
    <string name="lbl_cb1">オプション１</string>
    <string name="lbl_cb2">オプション２</string>
    <string name="lbl_cb3">オプション３</string>
    <string name="lbl_btnInformationUpdate">情報更新</string>
    <string name="lbl_tvTitleFeeTotal">手数料置き</string>
    <string name="lbl_btnWait">待機</string>
    <string name="lbl_cbEndingTreatment">施設マスタの文言を合わせる</string>
    <string name="lbl_tvMsgNotice">伝票を貰ったらチェックを付けて下さい</string>
    <string name="lbl_tvTitleTakeOutCash">持帰り現金</string>
    <string name="lbl_tvTitleFeePlacement">手数料置き</string>
    <string name="lbl_tvTitleCashReceived">お客様に頂く現金</string>
    <string name="lbl_tvTitleFeeTaxIncluded">料金（税込み）</string>
    <string name="lbl_course_o">○○○○○コース</string>
    <string name="lblCustomer">お客様 :</string>
    <string name="lbl_ContentOfReport">報告内容</string>
    <string name="lblTemporarilySave">一時保存</string>
    <string name="lbl_btnRegistration">登録</string>
    <string name="lbl_btnGoBack">戻る</string>
    <string name="lbl_tvTitleItemNumberOfLinen">持出し数を入力する</string>
    <string name="lbl_tvPieces"><![CDATA[  個]]></string>
    <string name="lbl_tvTitleRouteSearch">ルート検索</string>
    <string name="lbl_tvDeparture">出発</string>
    <string name="lbl_tvArrival">到着</string>
    <string name="lbl_tvTrainFare">電車運賃</string>
    <string name="lbl_tvUnit">円</string>
    <string name="lbl_tvTitleVehicleSettings">乗車する車両を設定</string>
    <string name="lbl_tvBoardingVehicle">乗車車両</string>
    <string name="lbl_tvDriver">運転手</string>
    <string name="lbl_tvPhoneNumber">電話番号</string>
    <string name="lbl_btnConfirmation">確認</string>
    <string name="lbl_btnDone">完了</string>
    <string name="lbl_tvNumberItemTakenOut">持ち出し数</string>
    <string name="lblWaitingPlace">待機所</string>
    <string name="lblPleaseSelectAnOption">オプションを選択してください。</string>

    <!--    Errors-->
    <string name="lblPleaseSelectTheWaitingAreaFirst">待機所を先に選択してください</string>
    <string name="lblPasswordMustNot">パスワードは8文字を超えてはなりません</string>
    <string name="llb_tvTitleNotice">お知らせ</string>
    <string name="lbl_tvMesaageNoWoking">本日、出勤予定ではありません</string>
    <string name="lbl_tvMesaageNoData">データなし</string>
    <string name="msg_unedit_shift_table">シフト表を編集することができません</string>
    <string name="hintNumberTelephone">000-0000-0000</string>
    <string name="lblNextReservation">次の予約: </string>
    <string name="lbl_tvRetryGetListSchedule">サーバへの接続に失敗しました。\n申し訳ございませんが、\nしばらく待ってからもう一度やり直してください</string>
    <string name="lblAllNumbers">所有数</string>
</resources>