<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.FrmShiftTable">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/clTop"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_30sdp"
        android:background="@drawable/bg_btn_notice"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/glV074"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.74" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/glV026"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.26" />

        <jp.co.kojimachi.view.CustomMonthLayout
            android:id="@+id/clMonthAndYear"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_20sdp"
            app:layout_constraintTop_toTopOf="parent" />


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/clMonthAndYear">

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/glV01"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.1" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/glV0357"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.357" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lbl_attendance_time"
                android:textColor="@color/colorTextTitle"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@+id/tvStartAttendanceTime"
                app:layout_constraintStart_toStartOf="@+id/glV01"
                app:layout_constraintTop_toTopOf="@+id/tvStartAttendanceTime" />

            <TextView
                android:id="@+id/tvStartAttendanceTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_20sdp"
                android:background="@drawable/bg_edt_login"
                android:gravity="center"
                android:text="16:00"
                android:textColor="@color/colorTextTitle"
                app:layout_constraintStart_toStartOf="@+id/glV0357"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tvEndAttendanceTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_20sdp"
                android:background="@drawable/bg_edt_login"
                android:gravity="center"
                android:text="22:00"
                android:textColor="@color/colorTextTitle"
                app:layout_constraintStart_toEndOf="@+id/tvStartAttendanceTime"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lblWaitingPlace"
                android:textColor="@color/colorTextTitle"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@+id/tvWaitingPlace"
                app:layout_constraintStart_toStartOf="@+id/glV01"
                app:layout_constraintTop_toTopOf="@+id/tvWaitingPlace" />

            <jp.co.kojimachi.view.CustomSpinner
                android:id="@+id/tvWaitingPlace"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_20sdp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/tvEndAttendanceTime"
                app:layout_constraintStart_toStartOf="@+id/tvStartAttendanceTime"
                app:layout_constraintTop_toBottomOf="@+id/tvStartAttendanceTime" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/glH084"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.84" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/clTable"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/_10sdp"
        android:background="@drawable/bg_edt_login"
        app:layout_constraintBottom_toTopOf="@id/glH084"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/clTop">

        <LinearLayout
            android:id="@+id/clHeaderTable"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="5"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/bg1_header_table"
                android:gravity="center"
                android:text="@string/lbl_date"
                android:textColor="@color/white" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/bg_header_table"
                android:gravity="center"
                android:text="@string/lbl_attendance_status"
                android:textColor="@color/white" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/bg_header_table"
                android:gravity="center"
                android:text="@string/lblAttendanceTime"
                android:textColor="@color/white" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/bg_header_table"
                android:gravity="center"
                android:text="@string/lbl_leave_time"
                android:textColor="@color/white" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/bg2_header_table"
                android:gravity="center"
                android:text="@string/lbl_standby"
                android:textColor="@color/white" />
        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rcShiftTable"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/clHeaderTable" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/glH091"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.91" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/glH091">

        <TextView
            android:id="@+id/btnPutForward"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/margin_5"
            android:background="@drawable/bg_btn_login"
            android:gravity="center"
            android:text="@string/lbl_put_forward"
            android:textColor="@color/white"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent" />

        <TextView
            android:id="@+id/btnBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_5"
            android:background="@drawable/bg_btn_back"
            android:gravity="center"
            android:text="@string/lbl_back"
            android:textColor="@color/white"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>