<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:focusable="true"
    android:focusableInTouchMode="true"
    tools:context=".fragment.FrmLogin">

    <ScrollView
        android:id="@+id/svLogin"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/clRoot"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/imgLogoText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_20"
                android:layout_marginTop="@dimen/margin_30"
                android:src="@drawable/img_logo_text"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.viewpager.widget.ViewPager
                android:id="@+id/imgLogo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imgLogoText" />

            <TextView
                android:id="@+id/tvTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_10"
                android:text="@string/lbl_reservation_management"
                android:textColor="@color/colorTextTitle"
                android:textSize="@dimen/text_size_18"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@+id/imgLogoText"
                app:layout_constraintTop_toBottomOf="@+id/imgLogo" />

            <TextView
                android:id="@+id/tvLoginID"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_20"
                android:text="@string/lbl_login_id"
                android:textColor="@color/colorTextTitle"
                android:textSize="@dimen/text_size_14"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@+id/edtLoginID"
                app:layout_constraintTop_toBottomOf="@+id/tvTitle" />

            <EditText
                android:id="@+id/edtLoginID"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_10"
                android:background="@drawable/bg_edt_login"
                android:gravity="center"
                android:padding="5dp"
                android:singleLine="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvLoginID" />

            <TextView
                android:id="@+id/tvLoginPass"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_10"
                android:text="@string/lbl_login_pass"
                android:textColor="@color/colorTextTitle"
                android:textSize="@dimen/text_size_14"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@+id/edtLoginPass"
                app:layout_constraintTop_toBottomOf="@+id/edtLoginID" />

            <EditText
                android:id="@+id/edtLoginPass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_10"
                android:background="@drawable/bg_edt_login"
                android:gravity="center"
                android:inputType="textPassword"
                android:padding="5dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvLoginPass" />

            <TextView
                android:id="@+id/btnLogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@drawable/bg_btn_login"
                android:gravity="center"
                android:text="@string/lbl_login"
                android:textColor="@color/white"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.498"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/edtLoginPass" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_20"
                android:text="@string/lbl_forget_your_password"
                android:textColor="@color/colorBtnLogin"
                android:textSize="@dimen/text_size_13"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btnLogin" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>