<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.FrmVehicleSettings">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/glStart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.0533" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/glEnd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.9547" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/_27sdp"
        android:background="@drawable/bg_btn_notice"
        app:layout_constraintEnd_toStartOf="@id/glEnd"
        app:layout_constraintStart_toEndOf="@id/glStart"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.cardview.widget.CardView
            android:id="@+id/crVehicleSettings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:elevation="10dp"
            app:cardCornerRadius="@dimen/_8sdp"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/clVehicleSettings"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/glStartVehicleSettings"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintGuide_percent="0.0473" />

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/glStartSpinner"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintGuide_percent="0.311" />


                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/glEndVehicleSettings"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintGuide_percent="0.9408" />

                <TextView
                    android:id="@+id/tvTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:text="@string/lbl_tvTitleVehicleSettings"
                    android:textColor="@color/colorMain"
                    android:textSize="@dimen/_12sdp"
                    app:layout_constraintStart_toEndOf="@+id/glStartVehicleSettings"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/lbl_tvBoardingVehicle"
                    android:textColor="@color/colorText"
                    android:textSize="@dimen/_12sdp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="@+id/tvSpinnerBoardingVehicle"
                    app:layout_constraintStart_toEndOf="@+id/glStartVehicleSettings"
                    app:layout_constraintTop_toTopOf="@+id/tvSpinnerBoardingVehicle" />

                <jp.co.kojimachi.view.CustomSpinner
                    android:id="@+id/tvSpinnerBoardingVehicle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_12sdp"
                    app:layout_constraintEnd_toStartOf="@id/glEndVehicleSettings"
                    app:layout_constraintStart_toEndOf="@+id/glStartSpinner"
                    app:layout_constraintTop_toBottomOf="@+id/tvTitle" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/lbl_tvDriver"
                    android:textColor="@color/colorText"
                    android:textSize="@dimen/_12sdp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="@+id/tvDriver"
                    app:layout_constraintStart_toEndOf="@+id/glStartVehicleSettings"
                    app:layout_constraintTop_toTopOf="@+id/tvDriver" />

                <EditText
                    android:id="@+id/tvDriver"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/_15sdp"
                    android:background="@drawable/bg_border_select_time"
                    android:gravity="center_vertical"
                    android:paddingStart="@dimen/_12sdp"
                    android:singleLine="true"
                    android:textColor="@color/colorTextTitle"
                    android:textSize="@dimen/_12sdp"
                    app:layout_constraintEnd_toStartOf="@id/glEndVehicleSettings"
                    app:layout_constraintStart_toEndOf="@+id/glStartSpinner"
                    app:layout_constraintTop_toBottomOf="@+id/tvSpinnerBoardingVehicle" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/lbl_tvPhoneNumber"
                    android:textColor="@color/colorText"
                    android:textSize="@dimen/_12sdp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="@+id/tvPhoneNumber"
                    app:layout_constraintStart_toEndOf="@+id/glStartVehicleSettings"
                    app:layout_constraintTop_toTopOf="@+id/tvPhoneNumber" />

                <EditText
                    android:id="@+id/tvPhoneNumber"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/_15sdp"
                    android:background="@drawable/bg_border_select_time"
                    android:digits="0123456789-"
                    android:gravity="center_vertical"
                    android:hint="@string/hintNumberTelephone"
                    android:imeOptions="actionDone"
                    android:inputType="phone"
                    android:maxLength="13"
                    android:maxLines="1"
                    android:paddingStart="@dimen/_12sdp"
                    android:singleLine="true"
                    android:textColor="@color/colorTextTitle"
                    android:textSize="@dimen/_12sdp"
                    app:layout_constraintEnd_toStartOf="@id/glEndVehicleSettings"
                    app:layout_constraintStart_toEndOf="@+id/glStartSpinner"
                    app:layout_constraintTop_toBottomOf="@+id/tvDriver" />

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_30sdp"
                    android:layout_marginTop="@dimen/_12sdp"
                    app:layout_constraintTop_toBottomOf="@+id/tvPhoneNumber" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/btnRegistration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_17sdp"
            android:background="@drawable/bg_button_normal"
            android:gravity="center"
            android:text="@string/lbl_btnRegistration"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/_14sdp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/btnGoBack"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/btnGoBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_button_cancel"
            android:gravity="center"
            android:text="@string/lbl_btnGoBack"
            android:textColor="@color/white"
            android:textSize="@dimen/_14sdp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@id/btnRegistration"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/btnRegistration"
            app:layout_constraintTop_toTopOf="@id/btnRegistration" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>